<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BackgroundScreen"
    tools:context=".OtpVerificationActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/verificationPage"
        android:textSize="28sp"
        android:textStyle="bold"
        style="@style/textColor"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otpsentto"
        android:textSize="16sp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/phn_num_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:text=""
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/otp_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputCode1"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="yes"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/inputCode2"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="yes"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/inputCode3"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="yes"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/inputCode4"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="yes"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/inputCode5"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="yes"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/inputCode6"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:importantForAutofill="yes"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/_resend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/otp_holder"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didntreceiveotp"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/_resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:textColor="#FD0000"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_otpVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Verify"
        android:textSize="30sp"
        android:layout_below="@+id/_resend"
        android:layout_centerHorizontal="true"/>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/_resend"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>